Add support for external RTC PCF8665 via I2C on efusA9X
- Allow setting a second RTC via CONFIG_RTC_HCTOSYS_OPT; check for the
  optional RTC defined in CONFIG_RTC_HCTOSYS_OPT_DEVICE first, only if
  this does not exist, use regular rtc from CONFIG_RTC_HCTOSYS_DEVICE
- This requires additions in drivers/rtc: Kconfig, hctosys.c, systohc.c
- Activate CONFIG_RTC_HCTOSYS_OPT in fsimx6sx_defconfig
- Add CONFIG_RTC_DRV_PCF8563 to fsimx6sx_defconfig
- Remove unused CONFIG_TC_DRV_MXC from fsimx6sx_defconfig

Device tree modifications:

- Disable regular snvs-rtc in fsimx6sx.dtsi device tree, it consumes
  too much battery power, we have the external PCF8665 on efusA9X
- Add pcf8565 entry to I2C1 (compatible to pcf8563)

--- a/arch/arm/boot/dts/imx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/imx6sx-efusa9x.dts
@@ -694,8 +694,6 @@
 	pinctrl-0 = <&pinctrl_i2c1_1>;
 	status = "okay";
 
-       // ### TODO: RTC PCA8565, this is not yet converted to device trees
-
 	sgtl5000: sgtl5000@0a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
@@ -703,6 +701,11 @@
 		VDDA-supply = <&reg_sgtl5000_vdda>;
 		VDDIO-supply = <&reg_sgtl5000_vddio>;
 		VDDD-supply = <&reg_sgtl5000_vddd>;
+	};
+
+	rtc8565@51 {
+		compatible = "nxp,pcf8565", "nxp,pcf8563";
+		reg = <0x51>;
 	};
 
 #if 0
