Add support for Marvell SD8787 WLAN/Bluetooth for efusA9X
These are in fact two drivers that require a common firmware file:

  /lib/firmware/sd8787_uapsta.bin

This file can be taken from Buildroot linux firmware package for
example. The drivers must be configured as modules, otherwise they
will not find the firmware file.

- In fsimx6sx_defconfig change CONFIG_MWIFIEX and CONFIG_MWIFIEX_SDIO
  to modules, otherwise the firmware is not found
- Add CONFIG_BT_MRVL and CONFIG_BT_MRVL_SDIO (as modules) to
  fsimx6sx_defconfig to activate the Bluetooth part of the Marvell chip

To use the WLAN driver from userspace, the programs iw, wpa_supplicant
and wpa_passphrase are required (for example by using BR2_PACKAGE_IW
in Buildroot). You need option -D nl80211 for wpa_supplicant to work.

To use the Bluetooth driver from userspace, the programs bluetoothd,
hcitool and rfcomm are required (for example by using package
BR2_PACKAGE_BLUEZ_UTILS in Buildroot).

--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -71,6 +71,8 @@ CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIBCM203X=y
+CONFIG_BT_MRVL=m
+CONFIG_BT_MRVL_SDIO=m
 CONFIG_BT_ATH3K=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
@@ -138,8 +140,8 @@ CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
 # CONFIG_RTL_CARDS is not set
-CONFIG_MWIFIEX=y
-CONFIG_MWIFIEX_SDIO=y
+CONFIG_MWIFIEX=m
+CONFIG_MWIFIEX_SDIO=m
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_MATRIXKMAP=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
