Add support for extended MXS DMA (APBH)
This modifed DMA engine is used in the F&S implementation of the
GPMI NAND driver. This version uses a ring buffer of DMA descriptors
and allows setting the data of the descriptor in a more simple way by
misusing the struct scatterlist pointer argument of function
mxs_dma_ext_prep_slave_sg() as a pinter to struct mxs_dma_ccw. This
allows the caller to prepare all necessary data.

- Add to drivers/dma/Kconfig and drivers/dma/Makefile
- Add driver file drivers/dma/mxs-dma-ext.c
- Add header file include/linux/mxs-dma-ext.h

Remark:
The purpose of using this DMA for a cyclic LCD framebuffer refresh
like in the original driver is not supported in this version.

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -277,12 +277,20 @@ config IMX_DMA
 
 config MXS_DMA
 	bool "MXS DMA support"
-	depends on SOC_IMX23 || SOC_IMX28 || SOC_IMX6Q
+	depends on SOC_IMX23 || SOC_IMX28 || SOC_IMX6Q || SOC_IMX6SX
 	select STMP_DEVICE
 	select DMA_ENGINE
 	help
 	  Support the MXS DMA engine. This engine including APBH-DMA
 	  and APBX-DMA is integrated into Freescale i.MX23/28 chips.
+
+config MXS_DMA_EXT
+	bool "Extended MXS DMA support"
+	depends on SOC_IMX23 || SOC_IMX28 || SOC_IMX6Q || SOC_IMX6SX
+	select DMA_ENGINE
+	help
+	  Use the extended version of the MXS DMA engine to have better
+	  GPMI NAND support on i.MX6.
 
 config EP93XX_DMA
 	bool "Cirrus Logic EP93xx DMA support"
