Add F&S version of GPMI NAND driver
This version uses the extended MXS DMA driver and the F&S page layout.

- Add to drivers/mtd/nand/Kconfig, drivers/mtd/nand/Makefile and
  drivers/mtd/nand/gpmi-nand/Makefile
- Add driver file drivers/mtd/nand/gpmi-nand/gpmi-nand-fus.c
- In drivers/mtd/nand/gpmi-nand/bch-regs.h, add additional flashlayout
  register defines

--- a/drivers/mtd/nand/Kconfig
+++ b/drivers/mtd/nand/Kconfig
@@ -389,6 +389,13 @@ config MTD_NAND_GPMI_NAND
 	 block, such as SD card. So pay attention to it when you enable
 	 the GPMI.
 
+config MTD_NAND_GPMI_NAND_FUS
+        tristate "GPMI NAND Flash Controller driver (F&S version)"
+        depends on MTD_NAND && MXS_DMA_EXT
+        help
+	  Enables NAND Flash support for i.MX6 on F&S boards and modules.
+	  It uses the new and extended version of the APBH DMA driver.
+
 config MTD_NAND_BCM47XXNFLASH
 	tristate "Support for NAND flash on BCM4706 BCMA bus"
 	depends on BCMA_NFLASH
