--- a/drivers/mtd/nand/gpmi-nand/Makefile
+++ b/drivers/mtd/nand/gpmi-nand/Makefile
@@ -1,3 +1,5 @@
 obj-$(CONFIG_MTD_NAND_GPMI_NAND) += gpmi_nand.o
 gpmi_nand-objs += gpmi-nand.o
 gpmi_nand-objs += gpmi-lib.o
+obj-$(CONFIG_MTD_NAND_GPMI_NAND_FUS) += gpmi_nand_fus.o
+gpmi_nand_fus-objs += gpmi-nand-fus.o
