Use F&S GPMI NAND driver on efusA9X
Device tree modifications:

- Do not re-initialize the GPMI NAND pads, they are still active from
  U-Boot.
- Set new compatible entry in dma_apbh node to use extended MXS DMA
  driver
- Set new compatible entry in gpmi node to use F&S GPMI NAND driver;
  add settings for 1K chunks, 2 skipblocks and ecc_strength 52.

Other changes:

- Set CONFIG_MTD_NAND_GPMI_NAND_FUS and CONFIG_MXS_DMA_EXT in defconfig
  for fsimx6sx to activate the new drivers for DMA and NAND

--- a/arch/arm/boot/dts/imx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/imx6sx-efusa9x.dts
@@ -380,8 +380,8 @@
 
 #endif //###
 
-#if 0
 		pinctrl_gpmi_nand_1: gpmi-nand-1 {
+#if 0
 			fsl,pins = <
 				MX6SX_PAD_NAND_CLE__RAWNAND_CLE         0xb0b1
 				MX6SX_PAD_NAND_ALE__RAWNAND_ALE         0xb0b1
@@ -400,8 +400,8 @@
 				MX6SX_PAD_NAND_DATA06__RAWNAND_DATA06   0xb0b1
 				MX6SX_PAD_NAND_DATA07__RAWNAND_DATA07   0xb0b1
 			>;
-		};
 #endif
+		};
 
 		/* I2C_C: RTC (PCA8565), LVDS-Connector, SGTL5000 (SKIT),
 		   Mini-PCIe (SKIT), Camera (SKIT, 2x) */
@@ -1193,13 +1193,21 @@
 #endif
 };
 
-#if 0
+&dma_apbh {
+	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
+	compatible = "fus,imx6sx-dma-apbh", "fus,imx28-dma-apbh";
+};
+
 &gpmi {
+	/* Switch to F&S implementation of GPMI NAND driver */
+	compatible = "fus,imx6sx-gpmi-nand";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
+	fus,skipblocks = <2>;
+	fus,chunk1k;
+	fus,ecc_strength = <52>;
 	status = "okay";
 };
-#endif
 
 #if 0 //###
 &vadc {
