--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -96,6 +96,7 @@ CONFIG_MTD_DATAFLASH=y
 CONFIG_MTD_M25P80=y
 CONFIG_MTD_SST25L=y
 CONFIG_MTD_NAND=y
+CONFIG_MTD_NAND_GPMI_NAND_FUS=y
 CONFIG_MTD_NAND_MXC=y
 CONFIG_MTD_SPI_NOR=y
 CONFIG_SPI_FSL_QUADSPI=y
@@ -271,6 +272,7 @@ CONFIG_RTC_DRV_SNVS=y
 CONFIG_DMADEVICES=y
 CONFIG_MXC_PXP_V2=y
 CONFIG_IMX_SDMA=y
+CONFIG_MXS_DMA_EXT=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 # CONFIG_IOMMU_SUPPORT is not set
