Add and use F&S Linux logo with Tux holding NetDCU tile
- Add logo bitmaps for 2, 16 and 224 colors
- Add logos to drivers/video/logo/logo.c, drivers/video/logo/Makefile
  and include/linux/linux_logo.h
- Add logo selection in drivers/video/logo/Kconfig
- Activate F&S logos in fsimx6sx_defconfig

--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -204,6 +204,12 @@ CONFIG_FB_MXC_DCIC=m
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
+# CONFIG_LOGO_LINUX_CLUT224 is not set
+CONFIG_LOGO_FS_MONO=y
+CONFIG_LOGO_FS_VGA16=y
+CONFIG_LOGO_FS_CLUT224=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_SUPPORT_OLD_API is not set
