Add support for ADC on efusA9X
Device tree modifications:

- Activate reg_cref_3v3 regulator as ADC reference voltage
- Reduce num-channels of both ADCs to 2 (efuasA9X only uses inputs 0
  and 1 on each ADC)
- Activate adc1 and adc2 nodes

Other changes:

- Set CONFIG_IIO and CONFIG_VF610_ADC in fsimx6sx_defconfig to activate
  the ADC driver on efusA9X

--- a/arch/arm/boot/dts/imx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/imx6sx-efusa9x.dts
@@ -163,6 +163,13 @@
 		};
 #endif
 
+		reg_vref_3v3: regulator@0 {
+			compatible = "regulator-fixed";
+			regulator-name = "vref-3v3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+		};
+
 #if 0 //###
 		reg_sd3_vmmc: sd3_vmmc{
 			compatible = "regulator-fixed";
@@ -171,13 +178,6 @@
 			regulator-max-microvolt = <3000000>;
 			gpio = <&gpio2 11 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
-		};
-
-		reg_vref_3v3: regulator@0 {
-			compatible = "regulator-fixed";
-			regulator-name = "vref-3v3";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
 		};
 
 		reg_psu_5v: psu_5v0 {
@@ -581,17 +581,17 @@
 	};
 };
 
-#if 0 //###
 &adc1 {
 	vref-supply = <&reg_vref_3v3>;
+	num-channels = <2>;
 	status = "okay";
 };
 
 &adc2 {
 	vref-supply = <&reg_vref_3v3>;
+	num-channels = <2>;
 	status = "okay";
 };
-#endif //###
 
 &audmux {
 	pinctrl-names = "default";
