--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -126,7 +126,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
-# CONFIG_BLK_DEV_INITRD is not set
+CONFIG_BLK_DEV_INITRD=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -4147,3 +4147,7 @@ CONFIG_FONT_8x16=y
 # CONFIG_FONT_SUN12x22 is not set
 # CONFIG_FONT_10x18 is not set
 # CONFIG_VIRTUALIZATION is not set
+CONFIG_ATH6KL=m
+CONFIG_ATH6KL_SDIO=m
+
+CONFIG_GPU_LOW_MEMORY_KILLER=y
