fsimx6sx_android_defconfig: settle on a version that fits with the kernel
this change was created by:

make ARCH=arm fsimx6sx_android_defconfig
make ARCH=arm oldconfig
make ARCH=arm oldconfig
cp .config  arch/arm/configs/fsimx6sx_android_defconfig

The construction of the file fsimx6sx_android_defconfig
can at best be called suboptimal, it is neighter a
"defconfig", having been created not via "make savedefconfig",
but further on, it seemingly contains changes that do not
actually fit with the kernel source, so some changes are
automatically droped or turned into different changes, when
this file is put to use via "make ARCH=arm fsimx6sx_android_defconfig",
to obtain a .config that would then be used to compile the
kernel.

Note how the creation of the ATH6KL module was completey dropped,
as well as the GPU_LOW_MEMORY_KILLER configuration.

Regaring GPU_LOW_MEMORY_KILLER, we need a corresponding change
in drivers/mxc/gpu-viv/Kconfig, which is still to be ported
from the freescale Android kernel at around the 3.10.x level
to this kernel. As we have problems with low memory, maybe this
change could help us?

Regarding ATH6KL module, this can not be configured like that,
need to set some more options, sorry... Moreover, why would we
need that in the context of the efusa9x, which has a
Marvell WLAN+BT module, not an Atheros?

Next time, please use "make oldconfig", to at least compare
if your changes have the desired effect, or simply
use the "make menuconfig" directly.

Signed-off-by: Simon Braunschmidt <sb@emlix.com>

--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -127,6 +127,13 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_INITRAMFS_SOURCE=""
+CONFIG_RD_GZIP=y
+# CONFIG_RD_BZIP2 is not set
+# CONFIG_RD_LZMA is not set
+# CONFIG_RD_XZ is not set
+# CONFIG_RD_LZO is not set
+# CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -1064,7 +1071,7 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 # CONFIG_CFG80211_WEXT is not set
 # CONFIG_LIB80211 is not set
-CONFIG_MAC80211=y
+CONFIG_MAC80211=m
 CONFIG_MAC80211_HAS_RC=y
 # CONFIG_MAC80211_RC_PID is not set
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1558,8 +1565,8 @@ CONFIG_WLAN=y
 # CONFIG_RTL_CARDS is not set
 # CONFIG_WL_TI is not set
 # CONFIG_ZD1211RW is not set
-CONFIG_MWIFIEX=y
-CONFIG_MWIFIEX_SDIO=y
+CONFIG_MWIFIEX=m
+CONFIG_MWIFIEX_SDIO=m
 # CONFIG_MWIFIEX_USB is not set
 # CONFIG_CW1200 is not set
 
@@ -3118,6 +3125,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
 CONFIG_RTC_SYSTOHC=y
 CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
+# CONFIG_RTC_HCTOSYS_OPT is not set
 # CONFIG_RTC_DEBUG is not set
 
 #
@@ -4114,6 +4122,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
@@ -4147,7 +4156,3 @@ CONFIG_FONT_8x16=y
 # CONFIG_FONT_SUN12x22 is not set
 # CONFIG_FONT_10x18 is not set
 # CONFIG_VIRTUALIZATION is not set
-CONFIG_ATH6KL=m
-CONFIG_ATH6KL_SDIO=m
-
-CONFIG_GPU_LOW_MEMORY_KILLER=y
