--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -1056,7 +1056,8 @@ CONFIG_BT_HCIBCM203X=y
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
-# CONFIG_BT_MRVL is not set
+CONFIG_BT_MRVL=m
+CONFIG_BT_MRVL_SDIO=m
 CONFIG_BT_ATH3K=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
