add changes to fsimx6sx_android_defconfig
compare recent 6 commits from H. Keller

from mail 18aug, "Neue Patches für efusA9X: NAND, ADC, Logo; Probleme bei USB-Device"

Signed-off-by: Simon Braunschmidt <sb@emlix.com>

--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -1225,6 +1225,7 @@ CONFIG_MTD_NAND_IDS=y
 # CONFIG_MTD_NAND_DOCG4 is not set
 # CONFIG_MTD_NAND_NANDSIM is not set
 CONFIG_MTD_NAND_GPMI_NAND=y
+CONFIG_MTD_NAND_GPMI_NAND_FUS=y
 # CONFIG_MTD_NAND_PLATFORM is not set
 CONFIG_MTD_NAND_MXC=y
 # CONFIG_MTD_ONENAND is not set
@@ -2563,9 +2564,12 @@ CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
 CONFIG_LOGO=y
-CONFIG_LOGO_LINUX_MONO=y
-CONFIG_LOGO_LINUX_VGA16=y
-CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_LOGO_LINUX_MONO is not set
+# CONFIG_LOGO_LINUX_VGA16 is not set
+# CONFIG_LOGO_LINUX_CLUT224 is not set
+CONFIG_LOGO_FS_MONO=y
+CONFIG_LOGO_FS_VGA16=y
+CONFIG_LOGO_FS_CLUT224=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
@@ -3115,6 +3119,7 @@ CONFIG_MXC_PXP_CLIENT_DEVICE=y
 CONFIG_IMX_SDMA=y
 # CONFIG_IMX_DMA is not set
 CONFIG_MXS_DMA=y
+CONFIG_MXS_DMA_EXT=y
 CONFIG_DMA_ENGINE=y
 CONFIG_DMA_OF=y
 
